@@ -1,0 +1,11 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2003/05/28 08:25:06 jlam Exp $
+share/cups/drivers/ADFONTS.MFM
+share/cups/drivers/ADOBEPS4.DRV
+share/cups/drivers/ADOBEPS4.HLP
+share/cups/drivers/ADOBEPS5.DLL
+share/cups/drivers/ADOBEPSU.DLL
+share/cups/drivers/ADOBEPSU.HLP
+share/cups/drivers/DEFPRTR2.PPD
+share/cups/drivers/ICONLIB.DLL
+share/cups/drivers/PSMON.DLL
+@unexec ${RMDIR} -p %D/share/cups/drivers 2>/dev/null || ${TRUE}
