@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2003/05/28 08:25:06 jlam Exp $
+
+SHA1 (adobeps-win-1.0.6/winsteng.exe) = 1d5de340ec3e165cf56da87c20434ad077f2bb86
+Size (adobeps-win-1.0.6/winsteng.exe) = 7740765 bytes
